*SVN*

* Update dependencies to delete partially loaded constants. [Nicholas Seckar]

* Fix unicode JSON regexp for Onigurama compatibility.  #6494 [whitley]

* update XmlSimple to 1.0.10. Closes #6532. [nicksieger]

* Update dependencies to allow constants to be defined alongside their siblings. A common case for this is AR model classes with STI; user.rb might define User, Administrator and Guest for example. [Nicholas Seckar]

* next_week respects DST changes.  #6483, #5617, #2353, #2509, #4551 [marclove, rabiedenharn, rails@roetzel.de, jsolson@damogran.org, drbrain@segment7.net]

* Expose methods added to Enumerable in the documentation, such as group_by. Closes #6170. [sergeykojin@gmail.com, Marcel Molina Jr.]

* Ensure Chars#tidy_bytes only tidies broken bytes. Closes #6397 [Manfred Stienstra]

* Add 'unloadable', a method used to mark any constant as requiring an unload after each request. [Nicholas Seckar]

* Make core_ext/string/access.rb multibyte safe. Closes #6388 [Manfred Stienstra]

* Make String#chars slicing behaviour consistent with String. Closes #6387 [Manfred Stienstra]

* Pull in latest multibye patch. Closes #6346 [Manfred Stienstra]

* Add ActiveSupport::Multibyte.  Provides String#chars which lets you deal with strings as a sequence of chars, not of bytes. Closes #6242 [Julian Tarkhanov, Manfred Stienstra, Thijs van der Vossen & Jan Behrens]

* Fix issue with #class_inheritable_accessor saving updates to the parent class when initialized with an Array or Hash [mojombo]

* Hash#to_xml supports Bignum and BigDecimal.  #6313 [edibiase]

* Don't undefine #class in OptionMerger [Rick]

* Hash.create_from_xml has been renamed to Hash.from_xml, alias will exist until Rails 2.0 [DHH]

* alias_method_chain works with accessor= methods also.  #6153 [Caio Chassot]

* Fix loadable_constants_for_path to handle load paths that do not end with a slash. [Nicholas Seckar]
